src/bindings.rs

extern "C" {
    #[doc = " Allocate an Intel PT packet decoder."]
    #[doc = ""]
    #[doc = " The decoder will work on the buffer defined in \\@config, it shall contain"]
    #[doc = " raw trace data and remain valid for the lifetime of the decoder."]
    #[doc = ""]
    #[doc = " The decoder needs to be synchronized before it can be used."]
    pub fn pt_pkt_alloc_decoder(config: *const pt_config) -> *mut pt_packet_decoder;
}
extern "C" {
    #[doc = " Free an Intel PT packet decoder."]
    #[doc = ""]
    #[doc = " The \\@decoder must not be used after a successful return."]
    pub fn pt_pkt_free_decoder(decoder: *mut pt_packet_decoder);
}
extern "C" {
    #[doc = " Synchronize an Intel PT packet decoder."]
    #[doc = ""]
    #[doc = " Search for the next synchronization point in forward or backward direction."]
    #[doc = ""]
    #[doc = " If \\@decoder has not been synchronized, yet, the search is started at the"]
    #[doc = " beginning of the trace buffer in case of forward synchronization and at the"]
    #[doc = " end of the trace buffer in case of backward synchronization."]
    #[doc = ""]
    #[doc = " Returns zero or a positive value on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_eos if no further synchronization point is found."]
    #[doc = " Returns -pte_invalid if \\@decoder is NULL."]
    pub fn pt_pkt_sync_forward(decoder: *mut pt_packet_decoder) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pt_pkt_sync_backward(decoder: *mut pt_packet_decoder) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Hard set synchronization point of an Intel PT decoder."]
    #[doc = ""]
    #[doc = " Synchronize \\@decoder to \\@offset within the trace buffer."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_eos if the given offset is behind the end of the trace buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder is NULL."]
    pub fn pt_pkt_sync_set(decoder: *mut pt_packet_decoder, offset: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the current decoder position."]
    #[doc = ""]
    #[doc = " Fills the current \\@decoder position into \\@offset."]
    #[doc = ""]
    #[doc = " This is useful for reporting errors."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@offset is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_pkt_get_offset(
        decoder: *const pt_packet_decoder,
        offset: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the position of the last synchronization point."]
    #[doc = ""]
    #[doc = " Fills the last synchronization position into \\@offset."]
    #[doc = ""]
    #[doc = " This is useful when splitting a trace stream for parallel decoding."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@offset is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_pkt_get_sync_offset(
        decoder: *const pt_packet_decoder,
        offset: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pt_pkt_get_config(decoder: *const pt_packet_decoder) -> *const pt_config;
}
extern "C" {
    #[doc = " Decode the next packet and advance the decoder."]
    #[doc = ""]
    #[doc = " Decodes the packet at \\@decoder's current position into \\@packet and"]
    #[doc = " adjusts the \\@decoder's position by the number of bytes the packet had"]
    #[doc = " consumed."]
    #[doc = ""]
    #[doc = " The \\@size argument must be set to sizeof(struct pt_packet)."]
    #[doc = ""]
    #[doc = " Returns the number of bytes consumed on success, a negative error code"]
    #[doc = " otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if the packet is unknown."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_eos if \\@decoder reached the end of the Intel PT buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@packet is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_pkt_next(
        decoder: *mut pt_packet_decoder,
        packet: *mut pt_packet,
        size: usize,
    ) -> ::std::os::raw::c_int;
}
#[doc = " There is an event pending."]
pub const pt_status_flag_pts_event_pending: pt_status_flag = 1;
#[doc = " The address has been suppressed."]
pub const pt_status_flag_pts_ip_suppressed: pt_status_flag = 2;
#[doc = " There is no more trace data available."]
pub const pt_status_flag_pts_eos: pt_status_flag = 4;
#[doc = " Decoder status flags."]
pub type pt_status_flag = i32;
pub const pt_event_type_ptev_enabled: pt_event_type = 0;
pub const pt_event_type_ptev_disabled: pt_event_type = 1;
pub const pt_event_type_ptev_async_disabled: pt_event_type = 2;
pub const pt_event_type_ptev_async_branch: pt_event_type = 3;
pub const pt_event_type_ptev_paging: pt_event_type = 4;
pub const pt_event_type_ptev_async_paging: pt_event_type = 5;
pub const pt_event_type_ptev_overflow: pt_event_type = 6;
pub const pt_event_type_ptev_exec_mode: pt_event_type = 7;
pub const pt_event_type_ptev_tsx: pt_event_type = 8;
pub const pt_event_type_ptev_stop: pt_event_type = 9;
pub const pt_event_type_ptev_vmcs: pt_event_type = 10;
pub const pt_event_type_ptev_async_vmcs: pt_event_type = 11;
pub const pt_event_type_ptev_exstop: pt_event_type = 12;
pub const pt_event_type_ptev_mwait: pt_event_type = 13;
pub const pt_event_type_ptev_pwre: pt_event_type = 14;
pub const pt_event_type_ptev_pwrx: pt_event_type = 15;
pub const pt_event_type_ptev_ptwrite: pt_event_type = 16;
pub const pt_event_type_ptev_tick: pt_event_type = 17;
pub const pt_event_type_ptev_cbr: pt_event_type = 18;
pub const pt_event_type_ptev_mnt: pt_event_type = 19;
#[doc = " Event types."]
pub type pt_event_type = i32;
#[doc = " An event."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pt_event {
    #[doc = " The type of the event."]
    pub type_: pt_event_type,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    #[doc = " The time stamp count of the event."]
    #[doc = ""]
    #[doc = " This field is only valid if \\@has_tsc is set."]
    pub tsc: u64,
    #[doc = " The number of lost mtc and cyc packets."]
    #[doc = ""]
    #[doc = " This gives an idea about the quality of the \\@tsc.  The more packets"]
    #[doc = " were dropped, the less precise timing is."]
    pub lost_mtc: u32,
    pub lost_cyc: u32,
    pub reserved: [u64; 2usize],
    pub variant: pt_event__bindgen_ty_1,
}
#[doc = " Event specific data."]
#[repr(C)]
#[derive(Copy, Clone)]
pub union pt_event__bindgen_ty_1 {
    pub enabled: pt_event__bindgen_ty_1__bindgen_ty_1,
    pub disabled: pt_event__bindgen_ty_1__bindgen_ty_2,
    pub async_disabled: pt_event__bindgen_ty_1__bindgen_ty_3,
    pub async_branch: pt_event__bindgen_ty_1__bindgen_ty_4,
    pub paging: pt_event__bindgen_ty_1__bindgen_ty_5,
    pub async_paging: pt_event__bindgen_ty_1__bindgen_ty_6,
    pub overflow: pt_event__bindgen_ty_1__bindgen_ty_7,
    pub exec_mode: pt_event__bindgen_ty_1__bindgen_ty_8,
    pub tsx: pt_event__bindgen_ty_1__bindgen_ty_9,
    pub vmcs: pt_event__bindgen_ty_1__bindgen_ty_10,
    pub async_vmcs: pt_event__bindgen_ty_1__bindgen_ty_11,
    pub exstop: pt_event__bindgen_ty_1__bindgen_ty_12,
    pub mwait: pt_event__bindgen_ty_1__bindgen_ty_13,
    pub pwre: pt_event__bindgen_ty_1__bindgen_ty_14,
    pub pwrx: pt_event__bindgen_ty_1__bindgen_ty_15,
    pub ptwrite: pt_event__bindgen_ty_1__bindgen_ty_16,
    pub tick: pt_event__bindgen_ty_1__bindgen_ty_17,
    pub cbr: pt_event__bindgen_ty_1__bindgen_ty_18,
    pub mnt: pt_event__bindgen_ty_1__bindgen_ty_19,
    _bindgen_union_align: [u64; 3usize],
}
#[doc = " Event: enabled."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_event__bindgen_ty_1__bindgen_ty_1 {
    #[doc = " The address at which tracing resumes."]
    pub ip: u64,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 7usize],
}
#[test]
fn bindgen_test_layout_pt_event__bindgen_ty_1__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<pt_event__bindgen_ty_1__bindgen_ty_1>(),
        16usize,
        concat!(
            "Size of: ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<pt_event__bindgen_ty_1__bindgen_ty_1>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1__bindgen_ty_1>())).ip as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_1),
            "::",
            stringify!(ip)
        )
    );
}
impl pt_event__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn resumed(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_resumed(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(resumed: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let resumed: u32 = unsafe { ::std::mem::transmute(resumed) };
            resumed as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " Event: disabled."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_event__bindgen_ty_1__bindgen_ty_2 {
    #[doc = " The destination of the first branch inside a"]
    #[doc = " filtered area."]
    #[doc = ""]
    #[doc = " This field is not valid if \\@ip_suppressed is set."]
    pub ip: u64,
}
#[test]
fn bindgen_test_layout_pt_event__bindgen_ty_1__bindgen_ty_2() {
    assert_eq!(
        ::std::mem::size_of::<pt_event__bindgen_ty_1__bindgen_ty_2>(),
        8usize,
        concat!(
            "Size of: ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_2)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<pt_event__bindgen_ty_1__bindgen_ty_2>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_2)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1__bindgen_ty_2>())).ip as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1__bindgen_ty_2),
            "::",
            stringify!(ip)
        )
    );
}
#[doc = " Event: async disabled."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_event__bindgen_ty_1__bindgen_ty_3 {
    #[doc = " The source address of the asynchronous branch that"]
    #[doc = " disabled tracing."]
    pub at: u64,
    #[doc = " The destination of the first branch inside a"]
    #[doc = " filtered area."]
    #[doc = ""]
    #[doc = " This field is not valid if \\@ip_suppressed is set."]
    pub ip: u64,
}
